--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <title>Document</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+    <link
+        href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="./css/styles.css">
 </head>
@@ -16,7 +17,7 @@
 <body>
     <!-- Шапка сайта -->
     <header class="header">
-        <a class="logo link" href="./index.html" >Web<span class="logo-name">Studio</span></a>
+        <a class="logo link" href="./index.html">Web<span class="logo-name">Studio</span></a>
         <nav class="header-navigation">
             <ul class="header-list list">
                 <li class="header-item"><a class="header-link link current-link" href="./index.html">Студия</a></li>
@@ -25,8 +26,10 @@
             </ul>
         </nav>
         <ul class="header-contact-list list">
-            <li class="header-contact-item"><a class="header-contact-link link"href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-            <li class="header-contact-item"><a class="header-contact-link link"href="tel:+380961111111">+38 096 111 11 11</a></li>
+            <li class="header-contact-item"><a class="header-contact-link link"
+                    href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+            <li class="header-contact-item"><a class="header-contact-link link" href="tel:+380961111111">+38 096 111 11
+                    11</a></li>
         </ul>
 
     </header>
@@ -34,7 +37,7 @@
         <!-- Герой -->
         <section class="hero">
             <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
-            <button class="hero-btn btn" type="button" >Заказать услугу</button>
+            <button class="hero-btn btn" type="button">Заказать услугу</button>
         </section>
         <!-- Преимущества -->
         <section class="priveleges">
@@ -42,34 +45,38 @@
             <ul class="priveleges-list list">
                 <li class="priveleges-item">
                     <h3 class="priveleges-title">Внимание к деталям</h3>
-                    <p class="priveleges-text">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
+                    <p class="priveleges-text">Идейные соображения, а также начало повседневной работы по формированию
+                        позиции.</p>
                 </li>
                 <li class="priveleges-item">
                     <h3 class="priveleges-title">Пунктуальность</h3>
-                    <p class="priveleges-text">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
+                    <p class="priveleges-text">Задача организации, в особенности же рамки и место обучения кадров влечет
+                        за собой.</p>
                 </li>
                 <li class="priveleges-item">
                     <h3 class="priveleges-title">Планирование</h3>
-                    <p class="priveleges-text">Равным образом консультация с широким активом в значительной степени обуславливает.</p>
+                    <p class="priveleges-text">Равным образом консультация с широким активом в значительной степени
+                        обуславливает.</p>
                 </li>
                 <li class="priveleges-item">
                     <h3 class="priveleges-title">Современные технологии</h3>
-                    <p class="priveleges-text">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
+                    <p class="priveleges-text">Значимость этих проблем настолько очевидна, что реализация плановых
+                        заданий.</p>
                 </li>
             </ul>
-        </section >
+        </section>
         <!-- Что предлагаем -->
         <section class="what">
             <h2 class="what-title">Чем мы занимаемся</h2>
             <ul class="what-list list">
                 <li class="what-item">
-                        <img src="./images/img1.jpg" alt="Планшет с док станцией" width="370">
+                    <img src="./images/img1.jpg" alt="Планшет с док станцией" width="370">
                 </li>
                 <li class="what-item">
-                        <img src="./images/img2.jpg" alt="Телефон с ноутбуком" width="370">
+                    <img src="./images/img2.jpg" alt="Телефон с ноутбуком" width="370">
                 </li>
                 <li class="what-item">
-                        <img src="./images/img3.jpg" alt="Планшет с матрицой цветов" width="370">
+                    <img src="./images/img3.jpg" alt="Планшет с матрицой цветов" width="370">
                 </li>
             </ul>
         </section>
@@ -80,39 +87,40 @@
                 <li class="team-item">
                     <img src="./images/img4.jpg" alt="Мужчина в очкаъ и с бородой" width="270">
                     <h3 class="team-name">Игорь Демьяненко</h3>
-                    <p class="team-text"lang="en">Product Designer</p>
+                    <p class="team-text" lang="en">Product Designer</p>
                 </li>
                 <li class="team-item">
                     <img src="./images/img5.jpg" alt="Девушка, блондинка в очках" width="270">
                     <h3 class="team-name">Ольга Репина</h3>
-                    <p class="team-text"lang="en">Frontend Developer</p>
+                    <p class="team-text" lang="en">Frontend Developer</p>
                 </li>
                 <li class="team-item">
                     <img src="./images/img6.jpg" alt="Мужчина с рыжей бородой" width="270">
                     <h3 class="team-name">Николай Тарасов</h3>
-                    <p class="team-text"lang="en">Marketing</p>
+                    <p class="team-text" lang="en">Marketing</p>
                 </li>
                 <li class="team-item">
                     <img src="./images/img7.jpg" alt="Мужчина, брюнет в очках" width="270">
                     <h3 class="team-name">Михаил Ермаков</h3>
-                    <p class="team-text"lang="en">UI Designer</p>
+                    <p class="team-text" lang="en">UI Designer</p>
                 </li>
             </ul>
         </section>
     </main>
     <!-- Футер -->
-    <footer>
-        <section class="contacts">
-            <a class="logo link" href="./index.html">Web<span class="contactns-name">Studio</span></a>
-            <address class="contacts-address">
-                <a class="googlemaps link" href="https://goo.gl/maps/HDP6xycDdDhgACgC6" target=_blank rel="noopener norefferer">г. Киев,
+    <footer class="contacts">
+        <a class="logo link" href="./index.html">Web<span class="contacts-name">Studio</span></a>
+        <address class="contacts-address">
+            <a class="googlemaps link" href="https://goo.gl/maps/HDP6xycDdDhgACgC6" target=_blank
+                rel="noopener norefferer">г. Киев,
                 пр-т Леси Украинки, 26</a>
-                <ul class="contacts-list list">
-                    <li class="contacts-item"><a class="contactns-link link" href="mailto:info@example.com">info@example.com</a></li>
-                    <li class="contacts-item"><a class="contactns-link link" href="tel:+380991111111">+38 096 111 11 11</a></li>
-                </ul>
-            </address>
-        </section>
+            <ul class="contacts-list list">
+                <li class="contacts-item"><a class="contacts-link link"
+                        href="mailto:info@example.com">info@example.com</a></li>
+                <li class="contacts-item"><a class="contacts-link link" href="tel:+380991111111">+38 096 111 11 11</a>
+                </li>
+            </ul>
+        </address>
     </footer>
 
 </body>
