--- a/portfolio.html
+++ b/portfolio.html
@@ -21,7 +21,8 @@
         <nav class="header-navigation">
             <ul class="header-list list">
                 <li class="header-item"><a class="header-link link" href="./index.html">Студия</a></li>
-                <li class="header-item"><a class="header-link link current-link" href="./portfolio.html">Портфолио</a></li>
+                <li class="header-item"><a class="header-link link current-link" href="./portfolio.html">Портфолио</a>
+                </li>
                 <li class="header-item"><a class="header-link link" href="Контакты">Контакты</a></li>
             </ul>
         </nav>
@@ -35,84 +36,80 @@
     </header>
     <main>
         <!-- Герой -->
-        <section class="works">
-            <h1 hidden>Категории работ</h1>
-            <ul class="works-list list">
-                <li class="works-item"><button class="works-btn btn btn-current" type="button">Все</button></li>
-                <li class="works-item"><button class="works-btn btn" type="button">Веб-сайты</button></li>
-                <li class="works-item"><button class="works-btn btn" type="button">Приложения</button></li>
-                <li class="works-item"><button class="works-btn btn" type="button">Дизайн</button></li>
-                <li class="works-item"><button class="works-btn btn" type="button">Маркетинг</button></li>
-            </ul>
-        </section>
         <section class="portfolio">
-            <h2 hidden>Портфолио</h2>
+            <h1 hidden>Категории работ</h1>
+            <ul class="portfolio list list">
+                <li class="portfolio-item"><button class="portfolio-btn btn btn-current" type="button">Все</button></li>
+                <li class="portfolio-item"><button class="portfolio-btn btn" type="button">Веб-сайты</button></li>
+                <li class="portfolio-item"><button class="portfolio-btn btn" type="button">Приложения</button></li>
+                <li class="portfolio-item"><button class="portfolio-btn btn" type="button">Дизайн</button></li>
+                <li class="portfolio-item"><button class="portfolio-btn btn" type="button">Маркетинг</button></li>
+            </ul>
             <ul class="portfolio-list list">
                 <li class="portfolio-item">
                     <img src="./images/portfolio/portfolio1.jpg" alt="пример веб-сайта" width="370">
-                    <h3 class="portfolio-title">Технокряк</h3>
-                    <p class="prtfolio-text">Веб-сайт</p>
+                    <h2 class="portfolio-title">Технокряк</h2>
+                    <p class="portfolio-text">Веб-сайт</p>
                 </li>
                 <li class="portfolio-item">
                     <img src="./images/portfolio/portfolio2.jpg" alt="два баскетболиста" width="370">
-                    <h3 class="portfolio-title">Постер New Orlean vs Golden Star</h3>
-                    <p>Дизайн</p>
+                    <h2 class="portfolio-title">Постер New Orlean vs Golden Star</h2>
+                    <p class="portfolio-text">Дизайн</p>
                 </li>
                 <li class="portfolio-item">
                     <img src="./images/portfolio/portfolio3.jpg" alt="логотип ресторана Сиафуд" width="370">
-                    <h3 class="portfolio-title">Ресторан Seafood</h3>
-                    <p class="prtfolio-text">Приложение</p>
+                    <h2 class="portfolio-title">Ресторан Seafood</h2>
+                    <p class="portfolio-text">Приложение</p>
                 </li>
                 <li class="portfolio-item">
                     <img src="./images/portfolio/portfolio4.jpg" alt="Черные наушники" width="370">
-                    <h3 class="portfolio-title">Проект Prime</h3>
-                    <p class="prtfolio-text">Маркетинг</p>
+                    <h2 class="portfolio-title">Проект Prime</h2>
+                    <p class="portfolio-text">Маркетинг</p>
                 </li>
                 <li class="portfolio-item">
                     <img src="./images/portfolio/portfolio5.jpg" alt="2 коробки" width="370">
-                    <h3 class="portfolio-title">Проект Boxes</h3>
-                    <p class="prtfolio-text">Приложение</p>
+                    <h2 class="portfolio-title">Проект Boxes</h2>
+                    <p class="portfolio-text">Приложение</p>
                 </li>
                 <li class="portfolio-item">
                     <img src="./images/portfolio/portfolio6.jpg" alt="макет сайта" width="370">
-                    <h3 class="portfolio-title">Inspiration has no Borders</h3>
-                    <p class="prtfolio-text">Веб-сайт</p>
+                    <h2 class="portfolio-title">Inspiration has no Borders</h2>
+                    <p class="portfolio-text">Веб-сайт</p>
                 </li>
                 <li class="portfolio-item">
                     <img src="./images/portfolio/portfolio7.jpg" alt="разворот журнала" width="370">
-                    <h3 class="portfolio-title">Издание Limited Edition</h3>
-                    <p class="prtfolio-text">Дизайн</p>
+                    <h2 class="portfolio-title">Издание Limited Edition</h2>
+                    <p class="portfolio-text">Дизайн</p>
                 </li>
                 <li class="portfolio-item">
                     <img src="./images/portfolio/portfolio8.jpg" alt="визитная карточка проекта" width="370">
-                    <h3 class="portfolio-title">Проект LAB</h3>
-                    <p class="prtfolio-text">Маркетинг</p>
+                    <h2 class="portfolio-title">Проект LAB</h2>
+                    <p class="portfolio-text">Маркетинг</p>
                 </li>
                 <li class="portfolio-item">
                     <img src="./images/portfolio/portfolio9.jpg" alt="ноутбук с презентацией Приложения" width="370">
-                    <h3 class="portfolio-title">Growing Business</h3>
-                    <p class="prtfolio-text">Приложение</p>
+                    <h2 class="portfolio-title">Growing Business</h2>
+                    <p class="portfolio-text">Приложение</p>
                 </li>
             </ul>
         </section>
 
     </main>
     <!-- Футер -->
-    <footer>
-        <section class="contacts">
-            <a class="logo link" href="./index.html">Web<span class="contactns-name">Studio</span></a>
-            <address class="contacts-address">
-                <a class="googlemaps link" href="https://goo.gl/maps/HDP6xycDdDhgACgC6" target=_blank
-                    rel="noopener norefferer">г. Киев,
-                    пр-т Леси Украинки, 26</a>
-                <ul class="contacts-list list">
-                    <li class="contacts-item"><a class="contactns-link link"
-                            href="mailto:info@example.com">info@example.com</a></li>
-                    <li class="contacts-item"><a class="contactns-link link" href="tel:+380991111111">+38 096 111 11
-                            11</a></li>
-                </ul>
-            </address>
-        </section>
+    <footer class="contacts">
+        <a class="logo link" href="./index.html">Web<span class="contacts-name">Studio</span></a>
+        <address class="contacts-address">
+            <a class="googlemaps link" href="https://goo.gl/maps/HDP6xycDdDhgACgC6" target=_blank
+                rel="noopener norefferer">г. Киев,
+                пр-т Леси Украинки, 26</a>
+            <ul class="contacts-list list">
+                <li class="contacts-item"><a class="contacts-link link"
+                        href="mailto:info@example.com">info@example.com</a>
+                </li>
+                <li class="contacts-item"><a class="contacts-link link" href="tel:+380991111111">+38 096 111 11 11</a>
+                </li>
+            </ul>
+        </address>
     </footer>
 
 </body>
